namespace Vis.Common.Models;

public class OrganisationSecret
{
    public int OrganisationId;
    public string Value;
}